load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "distribution",
    srcs = glob(["**"]),
    visibility = ["//python:__pkg__"],
)

bzl_library(
    name = "py_zipapp_binary",
    srcs = ["py_zipapp_binary.bzl"],
    deps = [
        "//python/private:util",
        "//python/private/zipapp:py_zipapp_rule",
    ],
)

# keep
bzl_library(
    name = "py_zipapp_test",
    srcs = ["py_zipapp_test.bzl"],
    deps = [
        "//python/private:util",
        "//python/private/zipapp:py_zipapp_rule",
    ],
)
