load("@rules_python//python/uv:lock.bzl", "lock")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])  # Apache 2.0

# Run bazel run //sphinxdocs/dev:uv_lock.update
lock(
    name = "uv_lock",
    srcs = ["pyproject.toml"],
    out = "uv.lock",
    python_version = "3.9",
    visibility = ["//:__subpackages__"],
)
