# Copyright 2023 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":py_runtime_tests.bzl", "py_runtime_test_suite")

py_runtime_test_suite(name = "py_runtime_tests")


load("//tests/support:py_transition.bzl", "py_transition")

py_transition(
    name = "runtime_zipped_stdlib",
    targets = ["//tests/py_runtime/zipped_runtime:runtime_for_zip_test"],
    config_settings = {
        "//python/config_settings:zip_stdlib": "yes",
    },
)

load("//python:py_test.bzl", "py_test")

py_test(
    name = "test_generated_zip_stdlib",
    srcs = ["test_generated_zip_stdlib.py"],
    data = [":runtime_zipped_stdlib"],
)
