# Copyright 2024 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//python:py_binary.bzl", "py_binary")
load("//python:py_test.bzl", "py_test")
load("//python:py_zipapp_binary.bzl", "py_zipapp_binary")

py_binary(
    name = "bin",
    srcs = ["main.py"],
    config_settings = {
        "//python/config_settings:bootstrap_impl": "script",
        "//python/config_settings:venvs_site_packages": "yes",
    },
    main = "main.py",
    deps = ["@dev_pip//absl_py"],
)

py_zipapp_binary(
    name = "bin_zipapp",
    binary = ":bin",
)

py_test(
    name = "zipapp_test",
    srcs = ["zipapp_test.py"],
    data = [":bin_zipapp"],
    env = {
        "TEST_ZIPAPP": "$(location :bin_zipapp)",
    },
)

sh_test(
    name = "zipapp_test_sh",
    srcs = ["zipapp_test.sh"],
    args = ["$(location :bin_zipapp)"],
    data = [":bin_zipapp"],
)
