load("//python:py_binary.bzl", "py_binary")
load("//python:py_test.bzl", "py_test")
load("//python/private:bzlmod_enabled.bzl", "BZLMOD_ENABLED")
load("//python/zipapp:py_zipapp_binary.bzl", "py_zipapp_binary")

py_binary(
    name = "venv_bin",
    srcs = ["main.py"],
    config_settings = {
        "//python/config_settings:bootstrap_impl": "script",
        "//python/config_settings:venvs_site_packages": "yes",
    },
    main = "main.py",
    deps = ["@dev_pip//absl_py"],
)

py_zipapp_binary(
    name = "venv_zipapp",
    binary = ":venv_bin",
)

py_test(
    name = "venv_zipapp_test",
    srcs = ["venv_zipapp_test.py"],
    data = [":venv_zipapp"],
    env = {
        "TEST_ZIPAPP": "$(location :venv_zipapp)",
        "BZLMOD_ENABLED": str(int(BZLMOD_ENABLED)),
    },
)
