load("@rules_python_internal//:rules_python_config.bzl", rp_config = "config")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//python:py_library.bzl", "py_library")
load("//tests/support:py_reconfig.bzl", "py_reconfig_test")

py_library(
    name = "user_lib",
    deps = ["@other//simple_v1"],
)

py_library(
    name = "closer_lib",
    deps = [
        ":user_lib",
        "@other//simple_v2",
    ],
)

sh_test(
    name = "py_binary_other_module_test",
    srcs = [
        "py_binary_other_module_test.sh",
    ],
    data = [
        "@other//:venv_bin",
    ],
    env = {
        "VENV_BIN": "$(rootpath @other//:venv_bin)",
    },
)

py_reconfig_test(
    name = "venvs_site_packages_libs_test",
    srcs = ["bin.py"],
    bootstrap_impl = "script",
    main = "bin.py",
    venvs_site_packages = "yes",
    deps = [
        ":closer_lib",
        "//tests/venv_site_packages_libs/nested_with_pth",
        "//tests/venv_site_packages_libs/nspkg_alpha",
        "//tests/venv_site_packages_libs/nspkg_beta",
        "//tests/venv_site_packages_libs/pkgutil_top",
        "//tests/venv_site_packages_libs/pkgutil_top_sub",
        "@other//nspkg_delta",
        "@other//nspkg_gamma",
        "@other//nspkg_single",
        "@other//with_external_data",
        "@whl_with_data1//:pkg",
        "@whl_with_data2//:pkg",
    ],
)

py_reconfig_test(
    name = "shared_lib_loading_test",
    srcs = ["shared_lib_loading_test.py"],
    bootstrap_impl = select({
        "@platforms//os:windows": "system_python",
        "//conditions:default": "script",
    }),
    main = "shared_lib_loading_test.py",
    venvs_site_packages = "yes",
    deps = select({
        "@platforms//os:windows": [
            "@dev_pip//markupsafe",
        ],
        "//conditions:default": [
            "//tests/venv_site_packages_libs/ext_with_libs",
            "@dev_pip//macholib",
            "@dev_pip//pyelftools",
        ],
    }),
)

py_reconfig_test(
    name = "whl_scripts_runnable_test",
    srcs = ["whl_scripts_runnable_test.py"],
    bootstrap_impl = select({
        "@platforms//os:windows": "system_python",
        "//conditions:default": "script",
    }),
    env = {
        "BAZEL_8_OR_LATER": "1" if rp_config.bazel_8_or_later else "0",
    },
    main = "whl_scripts_runnable_test.py",
    venvs_site_packages = "yes",
    deps = [
        "@whl_with_data1//:pkg",
        "@whl_with_data2//:pkg",
    ],
)
