load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")

exports_files(["toml2json.py"])

py_library(
    name = "toml2json_lib",
    srcs = ["toml2json.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "toml2json",
    srcs = ["toml2json.py"],
    visibility = ["//visibility:public"],
)
